development/k3s/platform/otel-collector.yml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector-appmetrics
  namespace: wallet-ecosystem-local
  labels:
    app.kubernetes.io/name: otel-collector-appmetrics
    app.kubernetes.io/part-of: wallet-ecosystem
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "9464"
spec:
  selector:
    app.kubernetes.io/component: opentelemetry-collector
    app.kubernetes.io/instance: wallet-ecosystem-local.otel-collector
    app.kubernetes.io/managed-by: opentelemetry-operator
    app.kubernetes.io/part-of: opentelemetry
  ports:
    - name: metrics
      port: 9464
      targetPort: 9464
